--- a/main.html
+++ b/main.html
@@ -11,9 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<main class = "accio" id = "job">
-		<p class = "hello-accio">
-			Hello Accio Job
-		</p>
+		<p class = "hello-accio">Hello Accio Job</p>
 	</main>
 
 </body>
