--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<style>
+		/* Your CSS Code here. */
+.accio{
+	width-height : 150px;
+/* 	height : 150px; */
+	background-color : #000000;
+}
+
+.hello-accio{
+	color : #ffffff;
+	margin-left : 32px;
+	padding : 10pxx;
+}
+	</style>
     <script type="text/javascript" src="./script.js">
 </script>
 	<main class = "accio" id = "job">
