--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 .hello-accio{
 	color : #ffffff;
 	margin-left : 32px;
-	padding : 10pxx;
+	padding : 10px;
 }
 	</style>
     <script type="text/javascript" src="./script.js">
