--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 	<style>
 		/* Your CSS Code here. */
 .accio{
-	width-height : 150px;
-/* 	height : 150px; */
+	width : 150px;
+	height : 150px;
 	background-color : #000000;
 }
 
